--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ This repository contains the scripts used for in the manuscript:
 
 Scripts are provided in the format of a package to reproduce paper figures.
 
-Bincounts and segmentated cells dataset are available in `extdata/`.
+Bincounts and segmented cells dataset are available in `extdata/`.
 
 Scripts are available in the folder `R`.
 
